hphp/hack/test/typecheck/test_consts8.php
<?hh

abstract class C1 {
  abstract const int X;
  public function f(): string {
    return static::X;
  }
}
